syntax = "proto3";

package point;

option go_package = "github.com/syedomair/backend-microservices/protos/point";

message PointRequest {
    string user_id = 1;
}

message PointReply {
    string user_point = 1;
}

service PointServer {
    rpc GetUserPoints(PointRequest) returns (PointReply);
}

